--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-# Deep Learning Framework
+# Deep Learning Framework (Codespaces optimized)
 torch>=2.0.0
 torchvision>=0.15.0
+torchaudio>=2.0.0
 
 # Image Processing
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 Pillow>=10.0.0
 albumentations>=1.3.0
 
-# Utilities
+# Scientific Computing
 numpy>=1.24.0
+scipy>=1.10.0
+
+# Progress & Visualization
 matplotlib>=3.7.0
 tqdm>=4.65.0
+seaborn>=0.12.0
 
 # Urdu Text Processing
 arabic-reshaper>=3.0.0
@@ -18,3 +23,18 @@ python-bidi>=0.4.2
 
 # Logging and Monitoring
 tensorboard>=2.13.0
+
+# Development Tools for Codespaces
+jupyter>=1.0.0
+ipykernel>=6.25.0
+pandas>=2.0.0
+
+# Text Processing
+python-Levenshtein>=0.21.0
+
+# Memory optimization
+psutil>=5.9.0
+
+# Optional: Model serving
+fastapi>=0.100.0
+uvicorn>=0.23.0
